# syncgit

./: .gitignore  Cargo.toml  README.md  info.txt
src/: main.rs
