[package]
name = "syncgit"
version = "0.2.2"
edition = "2021"
authors = ["Rickypcyt <rickypcyt@gmail.com>"]
description = "CLI tool to sync git repositories."
readme = "README.md"
license = "MIT"
exclude = ["target/*"]

[dependencies]
# TUI deps for responsive UI
crossterm = "0.27"
# HTTP client for GitHub API
reqwest = { version = "0.11", features = ["json", "blocking"] }
# JSON serialization/deserialization
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
